# qutility-frontier

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
ScalableVolumetricBenchmark/: __init__.py
ScalableVolumetricBenchmark/cliffordvolumebenchmark/: __init__.py  cliffordvolumebenchmark.py  readme_Clifford_benchmark.md
ScalableVolumetricBenchmark/freefermionvolumebenchmark/: README.md  freefermionvolumebenchmark.py
ScalableVolumetricBenchmark/utils/: ____quantumcircuit.py  __init__.py  benchmarkschema.py  quantumbenchmark.py  quantumcircuit.py  so_decomposition.py
benchmarks/: __init__.py
benchmarks/utils/: __init__.py  quantumcircuit.py
docs/source/: ScalableVolumetricBenchmark.cliffordvolumebenchmark.rst  ScalableVolumetricBenchmark.freefermionvolumebenchmark.rst  ScalableVolumetricBenchmark.rst  ScalableVolumetricBenchmark.utils.rst  api.rst  api_clifford.rst  api_freefermion.rst  api_ghz.rst  api_utils.rst  clifford_benchmark.rst  conf.py  freefermion_benchmark.rst  ghz_benchmark.rst  index.rst  modules.rst
frontier/: __init__.py
frontier/cliffordvolumebenchmark/: cliffordvolumebenchmark.py  readme_Clifford_benchmark.md
frontier/freefermionvolumebenchmark/: __init__.py  freefermionvolumebenchmark.py  readme_FreeFermion_becnhmark.md
frontier/ghzbenchmark/: __init__.py  ghzbenchmark.py  readme_GHZ_benchmark.md
frontier/shorbenchmark/: __init__.py  _mersenne_factors.json  _mersenne_factors.py  readme_Shor_benchmark.md  shorbenchmark.py  status_Shor_benchmark.md
frontier/utils/: __init__.py  quantumbenchmark.py  quantumcircuit.py  so_decomposition.py
notebooks/: Bloqade_demo.ipynb  Braket_demo.ipynb  Cirq_demo.ipynb  CliffordVolumeBenchmark_tutorial.ipynb  FreeFermionVolumeBenchmark_tutorial.ipynb  GHZBenchmark_tutorial.ipynb  Qiskit_demo.ipynb  QuantumCircuit_tutorial.ipynb  ShorPeriodFindingBenchmark_test.ipynb  ShorPeriodFindingBenchmark_tutorial.ipynb  TKET_demo.ipynb  clifford_volume_benchmark_with_braket.ipynb  clifford_volume_benchmark_with_qiskit.ipynb  clifford_volume_benchmark_with_tket.ipynb  dev.ipynb  freefermion_volume_benchmark_with_braket.ipynb  freefermion_volume_benchmark_with_qiskit.ipynb  freefermion_volume_benchmark_with_tket.ipynb
notebooks/.benchmarks/: clifford_nq10_s10_20251123T114016_3f1621e4.json  clifford_nq10_s10_20251124T114153_38192808.json
notebooks/tutorial_data/: clifford_benchmark_results.json  clifford_nq5_s10_20260128T151031_bdcef790.json  free_fermion_benchmark_results.json  free_fermion_nq5_s10_20260129T124307_03ae1188.json  free_fermion_nq5_s25_20251125T143048_16de9700.json  ghz_benchmark_results.json  ghz_benchmark_with_results.json  ghz_nq5_s3_20260409T135443_e9d5b419.json  ghz_nq5_s3_tutorial.json
scripts/: generate_mersenne_factor_table.py
test/: test_cliffordvolumebenchmark.py  test_freefermionbenchmark.py  test_ghzbenchmark.py  test_quantum_circuit.py  test_quantumbenchmark.py  test_quantumcircuit.py  test_shorbenchmark.py  test_so_decompositoin.py
