[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalable_volumetric_benchmark"
version = "0.1.0"
description = "Quantum circuit utilities for volumetric benchmarking."
requires-python = ">=3.8,<=3.12"

dependencies = [
    "numpy>=1.21",
    "scipy>=1.8",
    "matplotlib>=3.5",
    "stim>=1.12",
]

# Optional but recommended:
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[tool.setuptools.packages.find]
include = ["ScalableVolumetricBenchmark", "ScalableVolumetricBenchmark.*"]
